# equiply-challenge

./: README.md  analysis_output.txt  challenge_data_enriched.csv  device_rules_cache.json  device_types_cache.json  enrich.py  formatting_corrections.txt  index.html  package-lock.json  package.json  probable_typos.txt  pyproject.toml  requirements.txt  serial_dates_cache.json  server.py  test_enrich_logic.py
enrichment/: __init__.py  analyzer.py  llm.py  metadata.py  parsers.py  pipeline.py  utils.py
src/: App.jsx  index.css
