[project]
name = "equiply-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.3",
    "openai>=2.40.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "uvicorn>=0.48.0",
]
